# sake_0

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Objects.txt  README.md  cmake_install.cmake  imgui.ini  sake
libs/assimp/: DartConfiguration.tcl  Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  revision.h
libs/assimp/code/: Makefile  cmake_install.cmake
libs/assimp/contrib/: Makefile  cmake_install.cmake
libs/assimp/contrib/irrXML/: Makefile  cmake_install.cmake
libs/assimp/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/assimp/test/headercheck/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: camera.cpp  camera.hpp  commonValues.h  config.hpp  directionalLight.cpp  directionalLight.hpp  fileOperations.hpp  level.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  omniShadowMap.cpp  omniShadowMap.hpp  pointLight.cpp  pointLight.hpp  serializable.cpp  serializable.hpp  shader.cpp  shader.hpp  shadowMap.cpp  shadowMap.hpp  spotLight.cpp  spotLight.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/Shaders/: directional_shadow_map.frag  shader.frag
src/imgui/: CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini  imgui_window_flags.txt
src/levels/: test_level.txt
src/levels/test_level/: cobble_floor.txt  deer.txt  iron_man.txt
src/materials/: dull.txt  mdull.txt  shiny.txt
